--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link type="text/css" rel="stylesheet" href="assets/css/style.css" />
-    <title>ASN - Advanced Sale Notification</title>
+    <title>ASN - Advanced Sales Notification</title>
   </head>
   <body>
     <header>
