--- a/index.html
+++ b/index.html
@@ -30,6 +30,59 @@
                     <input type="text" class="asn-inputs-style">
                 </div>
             </div>
+            <div class="asn-main-table">
+              <table>
+                <thead>
+                  <tr>
+                    <th>Vendedor</th>
+                    <th>Total</th>
+                    <th>Notificar</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Anakin</td>
+                    <td>R$ 55300.00</td>
+                    <td><img src="assets/img/Vector.svg" class="asn-notification-button"></td>
+                  </tr>
+                  <tr>
+                    <td>Anakin</td>
+                    <td>R$ 55300.00</td>
+                    <td><img src="assets/img/Vector.svg" class="asn-notification-button"></td>
+                  </tr>
+                  <tr>
+                    <td>Anakin</td>
+                    <td>R$ 55300.00</td>
+                    <td><img src="assets/img/Vector.svg" class="asn-notification-button"></td>
+                  </tr>
+                  <tr>
+                    <td>Anakin</td>
+                    <td>R$ 55300.00</td>
+                    <td><img src="assets/img/Vector.svg" class="asn-notification-button"></td>
+                  </tr>
+                  <tr>
+                    <td>Anakin</td>
+                    <td>R$ 55300.00</td>
+                    <td><img src="assets/img/Vector.svg" class="asn-notification-button"></td>
+                  </tr>
+                  <tr>
+                    <td>Anakin</td>
+                    <td>R$ 55300.00</td>
+                    <td><img src="assets/img/Vector.svg" class="asn-notification-button"></td>
+                  </tr>
+                  <tr>
+                    <td>Anakin</td>
+                    <td>R$ 55300.00</td>
+                    <td><img src="assets/img/Vector.svg" class="asn-notification-button"></td>
+                  </tr>
+                  <tr>
+                    <td>Anakin</td>
+                    <td>R$ 55300.00</td>
+                    <td><img src="assets/img/Vector.svg" class="asn-notification-button"></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
         </div>
       </section>
     </main>
